--- a/packages/starlight/components/RightSidebarPanel.astro
+++ b/packages/starlight/components/RightSidebarPanel.astro
@@ -12,7 +12,7 @@
     border-top: 1px solid var(--sl-color-hairline);
   }
   .container {
-    width: calc(var(--sl-sidebar-width) - var(--sl-sidebar-pad-x));
+    width: calc(var(--sl-sidebar-width) - 2 * var(--sl-sidebar-pad-x));
   }
   .right-sidebar-panel :global(h2) {
     color: var(--sl-color-white);
