--- a/packages/starlight/components/RightSidebarPanel.astro
+++ b/packages/starlight/components/RightSidebarPanel.astro
@@ -12,7 +12,7 @@
     border-top: 1px solid var(--sl-color-hairline);
   }
   .container {
-    width: var(--sl-sidebar-width);
+    width: calc(var(--sl-sidebar-width) - 2 * var(--sl-sidebar-pad-x));
   }
   .right-sidebar-panel :global(h2) {
     color: var(--sl-color-white);
@@ -26,6 +26,7 @@
     font-size: var(--sl-text-xs);
     text-decoration: none;
     color: var(--sl-color-gray-3);
+    word-break: break-word;
   }
   .right-sidebar-panel :global(a:hover) {
     color: var(--sl-color-white);
@@ -33,7 +34,12 @@
   @media (min-width: 72rem) {
     .container {
       max-width: calc(
-        100vw - var(--sl-content-width) - var(--sl-sidebar-width)
+        (
+          (
+              100vw - var(--sl-sidebar-width) - 2 * var(--sl-content-pad-x) - 2 *
+                var(--sl-sidebar-pad-x)
+            ) * 0.25 /* MAGIC NUMBER 🥲 */
+        )
       );
     }
   }
