Add padding to scroll preventing headings being obscured by nav

--- a/packages/starlight/style/util.css
+++ b/packages/starlight/style/util.css
@@ -41,3 +41,14 @@
     display: block;
   }
 }
+
+/* Add scroll padding to ensure anchor headings aren't obscured by nav */
+html {
+	/* Additional padding is needed to account for the mobile TOC */
+	scroll-padding-top: calc(1.5rem + var(--sl-nav-height) + var(--sl-mobile-toc-height));
+}
+@media (min-width: 72em) {
+	html {
+		scroll-padding-top: calc(1.5rem + var(--sl-nav-height));
+	}
+}
