--- a/packages/starlight/components/SiteTitle.astro
+++ b/packages/starlight/components/SiteTitle.astro
@@ -2,6 +2,10 @@
 import { logos } from 'virtual:starlight/user-images';
 import config from 'virtual:starlight/user-config';
 
+interface Props {
+  locale: string | undefined;
+}
+
 if (config.logo) {
   let err: string | undefined;
   if ('src' in config.logo) {
@@ -17,9 +21,15 @@ if (config.logo) {
   }
   if (err) throw new Error(err);
 }
+
+const { locale } = Astro.props
+
+const href = locale
+  ? `${import.meta.env.BASE_URL.replace(/\/$/, '')}/${locale}/`
+  : import.meta.env.BASE_URL
 ---
 
-<a href={import.meta.env.BASE_URL} class="site-title flex">
+<a {href} class="site-title flex">
   {
     config.logo && logos.dark && (
       <>
