--- a/packages/starlight/components/SiteTitle.astro
+++ b/packages/starlight/components/SiteTitle.astro
@@ -57,6 +57,7 @@ const href = withBase(Astro.props.locale || '/');
 
 <style>
   .site-title {
+    max-width: fit-content;
     align-items: center;
     gap: var(--sl-nav-gap);
     font-size: var(--sl-text-h4);
