Fix background color on select

--- a/packages/starlight/components/Select.astro
+++ b/packages/starlight/components/Select.astro
@@ -72,6 +72,10 @@ interface Props {
     appearance: none;
   }
 
+  option {
+    background-color: var(--sl-color-bg-nav);
+  }
+
   @media (min-width: 50rem) {
     select {
       font-size: var(--sl-text-sm);
