Fix image aspect ratio in Markdown content

--- a/packages/starlight/components/MarkdownContent.astro
+++ b/packages/starlight/components/MarkdownContent.astro
@@ -44,6 +44,7 @@
   .content :global(:is(img, picture, video, canvas, svg, iframe)) {
     display: block;
     max-width: 100%;
+    height: auto;
   }
 
   .content :global(h1) {
