Fix vertical alignment of social icons in site header

--- a/packages/starlight/components/SocialIcons.astro
+++ b/packages/starlight/components/SocialIcons.astro
@@ -32,6 +32,7 @@ const links = Object.entries(config.social || {}).filter(([, url]) =>
 
 <style>
   a {
+    display: flex;
     color: var(--sl-color-text-accent);
   }
   a:hover {
