--- a/packages/starlight/components/SidebarSublist.astro
+++ b/packages/starlight/components/SidebarSublist.astro
@@ -51,6 +51,7 @@ interface Props {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-inline: var(--sl-sidebar-item-padding-inline);
     cursor: pointer;
     user-select: none;
   }
