--- a/packages/starlight/components/SidebarSublist.astro
+++ b/packages/starlight/components/SidebarSublist.astro
@@ -19,7 +19,7 @@ interface Props {
           <details open>
             <summary class="sidebar-group-header">
               <h2>{entry.label}</h2>
-              <Icon name="down-caret" class="icon caret" />
+              <Icon name="right-caret" class="caret" size="1.25rem" />
             </summary>
             <Astro.self sublist={entry.entries} />
           </details>
