--- a/packages/starlight/components/SidebarSublist.astro
+++ b/packages/starlight/components/SidebarSublist.astro
@@ -55,6 +55,10 @@ interface Props {
     cursor: pointer;
     user-select: none;
   }
+  
+  h2 {
+    padding-inline: unset
+  }
 
   :global([dir='rtl']) .caret {
     transform: rotateZ(180deg);
