--- a/packages/starlight/components/SidebarSublist.astro
+++ b/packages/starlight/components/SidebarSublist.astro
@@ -47,6 +47,10 @@ interface Props {
     margin-top: 0.75rem;
   }
 
+  summary::marker,
+  summary::-webkit-details-marker {
+    display: none;
+  }
   .sidebar-group-header {
     display: flex;
     align-items: center;
