--- a/packages/starlight/components/SidebarSublist.astro
+++ b/packages/starlight/components/SidebarSublist.astro
@@ -1,5 +1,6 @@
 ---
 import type { SidebarEntry } from '../utils/navigation';
+import Icon from './Icon.astro';
 
 interface Props {
   sublist: SidebarEntry[];
@@ -15,10 +16,13 @@ interface Props {
             {entry.label}
           </a>
         ) : (
-          <>
-            <h2>{entry.label}</h2>
+          <details open>
+            <summary>
+              <h2>{entry.label}</h2>
+              <Icon name="right-caret" class="caret" size="1.25rem" />
+            </summary>
             <Astro.self sublist={entry.entries} />
-          </>
+          </details>
         )}
       </li>
     ))
@@ -36,11 +40,33 @@ interface Props {
     font-size: var(--sl-text-lg);
     font-weight: 600;
     color: var(--sl-color-white);
-    padding-inline: var(--sl-sidebar-item-padding-inline);
   }
 
   .sidebar-group + .sidebar-group {
     margin-top: 0.75rem;
+  }
+
+  summary {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-inline: var(--sl-sidebar-item-padding-inline);
+    cursor: pointer;
+    user-select: none;
+  }
+  summary::marker,
+  summary::-webkit-details-marker {
+    display: none;
+  }
+
+  .caret {
+    transition: transform 0.2s ease-in-out;
+  }
+  :global([dir='rtl']) .caret {
+    transform: rotateZ(180deg);
+  }
+  [open] .caret {
+    transform: rotateZ(90deg);
   }
 
   a {
