Scale down code block font size to match Figma design (#76)
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/packages/starlight/style/props.css
+++ b/packages/starlight/style/props.css
@@ -93,7 +93,7 @@
 
   --sl-text-body: var(--sl-text-base);
   --sl-text-body-sm: var(--sl-text-xs);
-  --sl-text-code: var(--sl-text-base);
+  --sl-text-code: var(--sl-text-sm);
   --sl-text-code-sm: var(--sl-text-xs);
   --sl-text-h1: var(--sl-text-4xl);
   --sl-text-h2: var(--sl-text-3xl);
