--- a/packages/starlight/components/EditLink.astro
+++ b/packages/starlight/components/EditLink.astro
@@ -1,12 +1,15 @@
 ---
 import type { CollectionEntry } from 'astro:content';
 import config from 'virtual:starlight/user-config';
+import { useTranslations } from '../utils/translations';
 
 interface Props {
   data: CollectionEntry<'docs'>['data'];
   id: CollectionEntry<'docs'>['id'];
+  locale: string | undefined;
 }
 
+const t = useTranslations(Astro.props.locale);
 const { editUrl } = Astro.props.data;
 
 let { baseUrl } = config.editLink;
@@ -20,4 +23,4 @@ const url =
     : undefined;
 ---
 
-{editUrl !== false && url && <a href={url}>Edit this page</a>}
+{editUrl !== false && url && <a href={url}>{t('page.editLink')}</a>}
