--- a/packages/starlight/components/LanguageSelect.astro
+++ b/packages/starlight/components/LanguageSelect.astro
@@ -1,6 +1,7 @@
 ---
 import config from 'virtual:starlight/user-config';
 import { localizedUrl } from '../utils/localizedUrl';
+import { useTranslations } from '../utils/translations';
 import Select from './Select.astro';
 
 interface Props {
@@ -13,6 +14,8 @@ interface Props {
 function localizedPathname(locale: string | undefined): string {
   return localizedUrl(Astro.url, locale).pathname;
 }
+
+const t = useTranslations(Astro.props.locale);
 ---
 
 {
@@ -20,7 +23,7 @@ function localizedPathname(locale: string | undefined): string {
     <starlight-lang-select>
       <Select
         icon="translate"
-        label="Select language"
+        label={t('languageSelect.accessibleLabel')}
         value={localizedPathname(Astro.props.locale)}
         options={Object.entries(config.locales).map(([code, locale]) => ({
           value: localizedPathname(code),
