--- a/packages/starlight/components/LastUpdated.astro
+++ b/packages/starlight/components/LastUpdated.astro
@@ -3,13 +3,16 @@ import type { CollectionEntry } from 'astro:content';
 import { fileURLToPath } from 'node:url';
 import project from 'virtual:starlight/project-context';
 import { getFileCommitDate } from '../utils/git';
+import { useTranslations } from '../utils/translations';
 
 interface Props {
   id: CollectionEntry<'docs'>['id'];
   lang: string;
+  locale: string | undefined;
 }
 
-const { id, lang } = Astro.props;
+const { id, lang, locale } = Astro.props;
+const t = useTranslations(locale);
 
 const currentFilePath = fileURLToPath(
   new URL('src/content/docs/' + id, project.root)
@@ -24,7 +27,7 @@ try {
 {
   date && (
     <p>
-      Last updated:{' '}
+      {t('page.lastUpdated')}
       <time datetime={date.toISOString()}>
         {date.toLocaleDateString(lang, { dateStyle: 'medium' })}
       </time>
