--- a/packages/starlight/components/MobileMenuToggle.astro
+++ b/packages/starlight/components/MobileMenuToggle.astro
@@ -1,11 +1,18 @@
 ---
 import Icon from './Icon.astro';
+import { useTranslations } from '../utils/translations';
+
+interface Props {
+  locale: string | undefined;
+}
+
+const t = useTranslations(Astro.props.locale);
 ---
 
 <starlight-menu-button>
   <button
     aria-expanded="false"
-    aria-label="Menu"
+    aria-label={t('menuButton.accessibleLabel')}
     aria-controls="starlight__sidebar"
     class="md:hidden"
   >
