--- a/packages/starlight/components/Search.astro
+++ b/packages/starlight/components/Search.astro
@@ -1,22 +1,37 @@
 ---
 import '@pagefind/default-ui/css/ui.css';
+import { useTranslations } from '../utils/translations';
 import Icon from './Icon.astro';
+
+interface Props {
+  locale: string | undefined;
+}
+
+const t = useTranslations(Astro.props.locale);
 ---
 
 <site-search>
   <button data-open-modal disabled>
-    <Icon name="magnifier" label="Search" />
-    <span class="hidden md:block" aria-hidden="true">Search</span>
+    {
+      /* The span is `aria-hidden` because it is not shown on small screens. Instead, the icon label is used for accessibility purposes. */
+    }
+    <Icon name="magnifier" label={t('search.label')} />
+    <span class="hidden md:block" aria-hidden="true">{t('search.label')}</span>
     <Icon
       name="forward-slash"
       class="hidden md:block"
-      label="(Press / to search)"
+      label={t('search.shortcutLabel')}
     />
   </button>
 
-  <dialog style="padding:0" aria-label="Search the documentation">
+  <dialog style="padding:0" aria-label={t('search.label')}>
     <div class="dialog-frame">
-      <button data-close-modal class="flex md:hidden">Cancel</button>
+      {
+        /* TODO: Make the layout of this button flexible to accommodate different word lengths. Currently hard-coded for English: “Cancel” */
+      }
+      <button data-close-modal class="flex md:hidden">
+        {t('search.cancelLabel')}
+      </button>
       {
         import.meta.env.DEV ? (
           <div style="margin: auto; text-align: center;">
