--- a/packages/starlight/components/TableOfContents.astro
+++ b/packages/starlight/components/TableOfContents.astro
@@ -1,14 +1,21 @@
 ---
 import type { MarkdownHeading } from 'astro';
 import config from 'virtual:starlight/user-config';
-import { generateToC } from './TableOfContents/generateToC';
+import { useTranslations } from '../utils/translations';
 import TableOfContentsList from './TableOfContents/TableOfContentsList.astro';
+import { generateToC } from './TableOfContents/generateToC';
 
 interface Props {
   headings: MarkdownHeading[];
+  locale: string | undefined;
 }
 
-const toc = generateToC(Astro.props.headings, config.tableOfContents);
+const { locale, headings } = Astro.props;
+const t = useTranslations(locale);
+const toc = generateToC(headings, {
+  ...config.tableOfContents,
+  title: t('tableOfContents.overview'),
+});
 ---
 
 <starlight-toc
@@ -16,7 +23,9 @@ const toc = generateToC(Astro.props.headings, config.tableOfContents);
   data-max-h={config.tableOfContents.maxHeadingLevel}
 >
   <nav aria-labelledby="starlight__on-this-page">
-    <h2 id="starlight__on-this-page">On this page</h2>
+    <h2 id="starlight__on-this-page">
+      {t('tableOfContents.onThisPage')}
+    </h2>
     <TableOfContentsList toc={toc} />
   </nav>
 </starlight-toc>
