Improve outside click detection on search modal
- Check if event target is inside the DOM before closing search modal

--- a/packages/starlight/components/Search.astro
+++ b/packages/starlight/components/Search.astro
@@ -63,7 +63,7 @@ const t = useTranslations(Astro.props.locale);
 
       /** Close the modal if a user clicks outside of the modal. */
       const onWindowClick = (event: MouseEvent) => {
-        if (!dialogFrame.contains(event.target as Node)) closeModal();
+        if (document.body.contains(event.target as Node) && !dialogFrame.contains(event.target as Node)) closeModal();
       };
 
       const openModal = (event?: MouseEvent) => {
