Fix small CSS compatibility issue

--- a/packages/starlight/components/PrevNextLinks.astro
+++ b/packages/starlight/components/PrevNextLinks.astro
@@ -52,7 +52,7 @@ const t = useTranslations(locale);
   a {
     display: flex;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     gap: 0.5rem;
     width: 100%;
     flex-basis: calc(50% - 0.5rem);
