--- a/packages/starlight/components/RightSidebar.astro
+++ b/packages/starlight/components/RightSidebar.astro
@@ -1,30 +1,21 @@
 ---
 import type { MarkdownHeading } from 'astro';
 import config from 'virtual:starlight/user-config';
-import type { StarlightDocsEntry } from '../utils/routing';
-import EditLink from './EditLink.astro';
 import RightSidebarPanel from './RightSidebarPanel.astro';
 import TableOfContents from './TableOfContents.astro';
 
 interface Props {
-  entry: StarlightDocsEntry;
   headings: MarkdownHeading[];
   locale: string | undefined;
 }
 
-const { entry, headings, locale } = Astro.props;
+const { headings, locale } = Astro.props;
 ---
 
-<RightSidebarPanel>
-  <TableOfContents {headings} {locale} />
-</RightSidebarPanel>
-<RightSidebarPanel>
-  {
-    config.editLink.baseUrl && (
-      <>
-        <h2>Contribute</h2>
-        <EditLink data={entry.data} id={entry.id} {locale} />
-      </>
-    )
-  }
-</RightSidebarPanel>
+{
+  config.tableOfContents && (
+    <RightSidebarPanel>
+      <TableOfContents {headings} {locale} />
+    </RightSidebarPanel>
+  )
+}
