Handle sidebar-less scenario in two column layout

--- a/packages/starlight/components/ContentPanel.astro
+++ b/packages/starlight/components/ContentPanel.astro
@@ -19,7 +19,7 @@
 
   @media (min-width: 72rem) {
     .container {
-      margin-inline-start: auto;
+      margin-inline: var(--sl-content-margin-inline, auto);
     }
   }
 </style>
