--- a/packages/starlight/components/RightSidebar.astro
+++ b/packages/starlight/components/RightSidebar.astro
@@ -2,6 +2,7 @@
 import type { MarkdownHeading } from 'astro';
 import config from 'virtual:starlight/user-config';
 import type { StarlightDocsEntry } from '../utils/routing';
+import { useTranslations } from '../utils/translations';
 import EditLink from './EditLink.astro';
 import RightSidebarPanel from './RightSidebarPanel.astro';
 import TableOfContents from './TableOfContents.astro';
@@ -13,6 +14,7 @@ interface Props {
 }
 
 const { entry, headings, locale } = Astro.props;
+const t = useTranslations(locale);
 ---
 
 <RightSidebarPanel>
@@ -22,7 +24,7 @@ const { entry, headings, locale } = Astro.props;
   {
     config.editLink.baseUrl && (
       <>
-        <h2>Contribute</h2>
+        <h2>{t('tableOfContents.contribute')}</h2>
         <EditLink data={entry.data} id={entry.id} {locale} />
       </>
     )
